syntax = "proto3";

package photopb;

service PhotoService {
    rpc New (NewRequest) returns (Photo) {}
    rpc Get (GetRequest) returns (Photo) {}
    rpc List (ListRequest) returns (PhotoList) {}
    rpc Update (UpdateRequest) returns (Photo) {}
    rpc Delete (DeleteRequest) returns (Empty) {}
}

message Empty {}

message Photo {
    string id = 1;
    string name = 2;
/* 
    width
    height
    bitsPerComponent
    bytesPerRow
    colorSpace
    int32 bitmapInfo
*/
    int64 created = 998 ;
    int64 updated = 999 ;
}

message PhotoList {
    repeated Photo photos = 1;
    int32 count = 2;
}

message NewRequest {
    string name = 1;    
}

message GetRequest {
    string id = 1;
}

message ListRequest {
    int64 page = 1;
    int64 limit = 2;
}

message UpdateRequest {
    string id = 1;
    string name = 2;
}

message DeleteRequest {
    string id = 1;
}